fix Davide + add overflows

--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,8 @@ body{
 .left-window .chats{
     background-color: white;
     list-style: none;
+    height: calc(100% - 200px);
+    overflow-y: auto;
 }
 
 .left-window .contact{
@@ -161,6 +163,7 @@ body{
 .right-window .active-chat{
     height: calc(100% - 140px);
     background-image: url("../img/mine.jpg");
+    overflow-y: auto;
 }
 
 .right-window .message-list{
